# VAE-RC-critical-transitions

./: README.md  pyproject.toml  requirements.txt
.cocodex/: implementer_latest.md  mission_brief.md  session.json  strategist_latest.md
.cocodex/history/: 20260419T155926684429Z_init.md  20260419T160108143044Z_strategist.md  20260419T160511314568Z_implementer.md  20260419T160903619742Z_implementer.md  20260419T161116801531Z_implementer.md  20260419T161126281558Z_dispute.md  20260419T161358498579Z_dispute_resolved.md  20260419T161554770467Z_implementer.md  20260419T163034218355Z_implementer.md  20260419T163658214227Z_implementer.md  20260419T163829244398Z_implementer.md  20260419T164843708912Z_implementer.md  20260419T165705330033Z_implementer.md  (+56 more)
configs/: food_chain.yaml  ks.yaml  lorenz_partial_obs.yaml  lorenz_single.yaml  lorenz_two_param.yaml
scripts/: experiment_round12_ridge.py  experiment_round14_lower_ratio.py  experiment_round16_n100_high_ratio.py  experiment_round17_ridge_interpolation.py  experiment_round18_n100_ridge7e5.py  experiment_round19_n1000_ridge7e5.py  experiment_round20_persistence.py  experiment_round22_alpha.py  experiment_round24_n100_alpha05_ratio035.py  experiment_round26_lambda_local.py  experiment_round29_b0.py  experiment_round30_train_length.py  experiment_round31_degree.py  generate_all_data.py  run_food_chain.sh  run_ks.sh  run_lorenz_partial.sh  run_lorenz_single.sh  run_lorenz_two_param.sh  sweep_lorenz_single_base.py
src/: __init__.py
src/data/: base.py  (+5 more)
tests/: test_eval_reservoir_logic.py  test_shapes.py  test_smoke.py
(+332 files in other folders)
