[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsupervised-critical-transition"
version = "0.1.0"
description = "Reproduction project for VAE + parameter-driven reservoir computing"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
